# CourseWork

./: CMakeLists.txt  build.sh
src/: main.cpp
